--- a/src/main/resources/public/src/scss/document/document.scss
+++ b/src/main/resources/public/src/scss/document/document.scss
@@ -7,9 +7,11 @@
 @charset 'utf-8';
 
 @import '../template/_reset.scss'; // 상속 불가
+@import '../template/_variables.scss';
 @import '../template/_functions.scss'; // 상속 불가
 @import '../template/_mixins.scss'; // 상속 불가
 @import '../template/_alignments.scss'; // 상속 불가
+@import '../template/_common.scss'; // 상속 불가
 @import '_variables.scss';
 @import '_elements.scss';
 
