--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -6,8 +6,10 @@
 @charset 'utf-8';
 
 @import '../../template/_reset.scss'; // 상속 불가
+@import '../../template/_variables.scss';
 @import '../../template/_functions.scss'; // 상속 불가
 @import '../../template/_mixins.scss'; // 상속 불가
+@import '../../template/_common.scss'; // 상속 불가
 @import '_variables.scss';
 @import '_fonts.scss';
 @import '_mixin.scss';
