#9224 [템플릿 SCSS] _elements.scss : 주석 오타 수정

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -10,7 +10,7 @@
  * 파일 경로 : template/_reset.scss
  * @description Customize CSS Reset (http://meyerweb.com/eric/tools/css/reset/)
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 *,
 *::before,
@@ -84,7 +84,7 @@ input, button, select, optgroup, textarea {
  * 파일 경로 : template/_alignments.scss
  * @description 정렬, 배치 관련 디자인
  * @author jy.lim
- * @vertionn 1.0
+ * @version 1.0
  */
 .flex-row {
   display: flex;
@@ -101,7 +101,7 @@ input, button, select, optgroup, textarea {
  * 파일 경로 : template/_common.scss
  * @description 공통으로 사용되는 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 .underline {
   text-decoration: underline;
@@ -126,7 +126,7 @@ input, button, select, optgroup, textarea {
  * 파일 경로 : template/_fonts.scss
  * @description 폰트 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 @font-face {
   font-family: "Noto Sans KR";
@@ -175,7 +175,7 @@ input, button, select, optgroup, textarea {
  * 파일 경로 : template/_elements.scss
  * @description HTML element 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 body {
   font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
@@ -2369,7 +2369,7 @@ button.default-point-line:not(:disabled):active span.icon {
  * 파일 경로 : template/_dropzone.scss
  * @description 파일 업로드 관련 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 @-webkit-keyframes passing-through {
   0% {
@@ -3134,7 +3134,7 @@ body.document-modal-active {
  * 파일 경로 : template/_date-picker.scss
  * @description Date/Time picker 관련 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 .picker-wrapper-date {
   display: inline-block;
@@ -3434,7 +3434,7 @@ body.document-modal-active {
  * 파일 경로 : template/_thumbnail.scss
  * @description 썸네일 디자인
  * @author jy.lim
- * @vertionn 1.0
+ * @version 1.0
  */
 body.thumbnail-modal-active {
   overflow: hidden !important;
@@ -3720,7 +3720,7 @@ body.thumbnail-modal-active {
  * 파일 경로 : template/_text-editor.scss
  * @description Customize Quill Editor v1.3.6 (https://quilljs.com/)
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 .ql-toolbar *:focus {
   outline: none !important;
@@ -3958,7 +3958,7 @@ body.thumbnail-modal-active {
  * 파일 경로 : template/_color-picker.scss
  * @description 컬러 피커 디자인
  * @author jy.lim
- * @vertionn 1.0
+ * @version 1.0
  */
 .color-picker {
   display: flex;
