--- a/src/main/resources/public/src/scss/template/_alignments.scss
+++ b/src/main/resources/public/src/scss/template/_alignments.scss
@@ -3,7 +3,7 @@
  * 파일 경로 : template/_alignments.scss
  * @description 정렬, 배치 관련 디자인
  * @author jy.lim
- * @vertionn 1.0
+ * @version 1.0
  */
 
 $flex-align-type: (row, column);
