--- a/src/main/resources/public/src/scss/template/_date-picker.scss
+++ b/src/main/resources/public/src/scss/template/_date-picker.scss
@@ -3,7 +3,7 @@
  * 파일 경로 : template/_date-picker.scss
  * @description Date/Time picker 관련 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 
 $datepicker-border-color: $line-gray;
