--- a/src/main/resources/public/src/scss/template/_reset.scss
+++ b/src/main/resources/public/src/scss/template/_reset.scss
@@ -3,7 +3,7 @@
  * 파일 경로 : template/_reset.scss
  * @description Customize CSS Reset (http://meyerweb.com/eric/tools/css/reset/)
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 // box model의 padding, margin, border를 개체 안에서 할당
 *,
