--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -3,5 +3,8 @@
  * 파일 경로 : template/_buttons.scss
  * @description 버튼 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
+ button {
+  background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer;
+}
