--- a/src/main/resources/public/src/scss/template/_fonts.scss
+++ b/src/main/resources/public/src/scss/template/_fonts.scss
@@ -3,7 +3,7 @@
  * 파일 경로 : template/_fonts.scss
  * @description 폰트 디자인
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 
 @mixin font-face($name, $path, $format, $style, $weight) {
