--- a/src/main/resources/public/src/scss/template/_text-editor.scss
+++ b/src/main/resources/public/src/scss/template/_text-editor.scss
@@ -3,7 +3,7 @@
  * 파일 경로 : template/_text-editor.scss
  * @description Customize Quill Editor v1.3.6 (https://quilljs.com/)
  * @author wdj
- * @vertionn 1.0
+ * @version 1.0
  */
 
  $quill-font-family:              "Noto Sans KR";
