#8919 입력 및 검색 화면 관련 포커싱 일감 수정 진행

--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -116,6 +116,7 @@
         const boardUpdateDt = document.getElementById('spanUpdateDt');
 
         window.onload = function() {
+            document.getElementById('boardTitle').focus();
             if (boardId === null) {
                 document.getElementById('boardUserInfo').style.display = 'none';
             }
