--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -44,6 +44,7 @@
         var offsetCount = 0;
         const offsetSize = 15;
         window.onload = function() {
+            document.getElementById('search').focus();
             if (boardAdminId !== null) {
                 document.getElementById('boardAdminId').value = boardAdminId;
             }
