--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -44,6 +44,7 @@
         var offsetCount = 0;
         const offsetSize = 15;
         window.onload = function () {
+            document.getElementById('search').focus();
             document.getElementById('fromDt').value = i18n.getDate({'months':-1});
             document.getElementById('searchToDt').value = i18n.getDate();
             dateTimePicker.initDatePicker('fromDt', setDatePicker);
