--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -116,6 +116,7 @@
     <script th:inline="javascript">
         /*<![CDATA[ */
         window.onload = function() {
+            document.getElementById('noticeTitle').focus();
             setDisplay('popTab',document.getElementById('popYn'));
             setDisplay('topNoticeTab',document.getElementById('topNoticeYn'));
             fileUploader.init({extra: {formId: 'frm', ownId: /*[[${notice?.noticeNo}]]*/''}});
@@ -245,6 +246,10 @@
 
     <script th:inline="javascript" th:if="${notice?.noticeNo}">
         /*<![CDATA[ */
+        window.onload = function() {
+            document.getElementById('noticeTitle').focus();
+        };
+
         function restSubmit(method, url, async) {
             let jsonData = '';
             if (method === 'put') {
